--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ debug: true
 spring:
   datasource:
     url: jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6426585
-    username: sql6426585
-    password: 17pszde3B7
+    username:
+    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
